create 3 new api endpoints
